# sophon

./: .eslintignore  .eslintrc  .gitignore  LICENSE  README.md  bsconfig.json  esy.json  index.mjs  package.json  tsconfig.json  vite.config.js
client/: .eslintrc  index.html  package.json  tsconfig.json
client/src/: index.tsx
client/src/api/: AbstractGameManager.ts  BrowserChecks.ts  ContractsAPI.ts  EthereumAccountManager.ts  GameManager.ts  LocalStorageManager.ts  MinerManager.ts  PlanetHelper.ts  SnarkArgsHelper.ts  UIStateStorageManager.ts  UtilityServerAPI.ts  snark.worker.js
client/src/app/: App.js  App.re  Email.tsx  GameLandingPage.tsx  GameLandingPageComponents.tsx  GameWindow.tsx  GameWindowLayout.tsx  Icons.tsx  LandingPage.tsx  LandingPageCanvas.tsx  ModalWindow.tsx  Notifications.tsx  SharePlanet.tsx  Terminal.tsx  TxConfirmPopup.tsx  application.module.css
client/src/components/: Button.tsx  Corner.tsx  Text.tsx
client/src/miner/: mimc.ts  miner.worker.ts  perlin.ts  permutation.ts
client/src/styles/: dfstyles.js  dfstyles.re  style.css
client/src/utils/: CheckedTypeUtils.ts  ChunkUtils.ts  MiningPatterns.ts  NotificationManager.tsx  ProcgenConsts.ts  ProcgenUtils.ts  TerminalEmitter.ts  TutorialManager.ts  UIEmitter.ts  Utils.ts  WindowManager.ts  constants.ts  local_contract_addr.ts  (+1 more)
lib/: LocalStorageManager.mjs  MinerManager.mjs  SpiralPattern.mjs  SpiralSkipPattern.mjs  alex.miner.mjs  big-fraction.js  chunk-utils.mjs  constants.mjs  env-utils.mjs  index.mjs  mimc.mjs  parse-utils.mjs  perlin.mjs  permutation.mjs  utils.mjs
native/: Cargo.toml
native/src/: explorers.rs  game.rs  lib.rs  mimc.rs
(+36 files in other folders)
