[package]
name = "sophon"
version = "0.1.0"
authors = ["Blaine Bublitz <blaine.bublitz@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "sophon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "=0.4.0"

[dependencies]
neon = "=0.4.0"
neon-serde = "0.4.0"
lazy_static = "1.4.0"
bigint = "4.4.3"
uint = "0.8.5"
serde = { version = "1.0.116", features = ["derive"] }
rayon = "1.4"
itertools = "0.9.0"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
# lto = "fat"
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
