[package]
name = "sophon"
version = "0.1.0"
authors = ["Blaine Bublitz <blaine.bublitz@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "sophon"
crate-type = ["cdylib"]

[build-dependencies]
# https://github.com/GabrielCastro/neon-serde/issues/61#issuecomment-700184165
neon-build = "=0.4.0"

[dependencies]
# https://github.com/GabrielCastro/neon-serde/issues/61#issuecomment-700184165
neon = "=0.4.0"
neon-serde = "0.4.0"
lazy_static = "1.4.0"
uint = "0.8.5"
serde = { version = "1.0.116", features = ["derive"] }
rayon = "1.4.1"
itertools = "0.9.0"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
# lto = "fat" # Digital Ocean, presumably gcc, doesnt like
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
